  * Add a hint to README.newscripts that new scripts might need a modification
    to debian/copyright

  [ Adam D. Barratt ]
  * debchange:
    + When adding a NEWS item, automatically propagate the urgency from the
      changelog. (Closes: #511911)
    + Make -v and -l interoperate with NEWS files properly again.
  * debcheckout: Fix a typo and perform some QA on the manpage.
  * debsign: Add further quoting around the use and generation of temporary
    directory names, in case $TMPDIR contains spaces.
  * mergechanges: Correct spelling of "parameters". Thanks, Kumar Appaiah.
    (Closes: #512164)

  [ James Vega ]
  * bts: Document correspondent and affects keys for select command.
  * debcheckout:
    + Filter TopGit branches out of the list of branches given to
      --git-track since "tg populate" already created them.
    + Determine the actual HEAD ref to skip when first cloning a git repo
      instead of assuming it is master.  This ensures branches don't get
      skipped when specifying extra branches to track with --git-track.
    + Correct the Vcs-* example for Vim.

 -- Patrick Schoenfeld <schoenfeld@debian.org>  Fri, 09 Jan 2009 23:01:08 +0100

devscripts (2.10.44) unstable; urgency=low

  [ Adam D. Barratt ]
  * bts:
    + Allow an alternative debbugs server to be specified. (Closes: #508676)
    + Modify "bts status" to request source package information, so that we
      don't always return "unknown".
    + Don't issue repeated "user foo" commands for the same user.
    + Remove excess whitespace from usertag commands.
  * checkbashisms:
    + Rework the comment detection code to avoid matching "$#" and to avoid
      a number of similar issues. (Closes: #510343)
    + Flag the use of "source" with an unquoted argument containing no path
      information. (Closes: #510345)
  * Debbugs.pm: Allow the address of the debbugs server to be specified
    rather than hard-coding bugs.debian.org.
  * debchange: